Fixed header elements position on mobile version

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,49 +36,55 @@ body {
 
 .header {
     position: fixed;
-    width: 30px;
+    width: 40px;
     height: 100%;
     top: 0;
     bottom: 0;
     left: 0;
     user-select: none;
-    color: $grey;
+    color: $grey_light;
     z-index: 30;
     @include breakpoint(mobile) {
         z-index: 100;
     }
+    &--inner {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding: 10px 0 0 10px;
+    }
     button {
-        position: absolute;
+        display: block;
         color: inherit;
         background: transparent;
         border: 0;
-        transform: rotate(-90deg);
+        white-space:nowrap;
+        display: block;
         outline: none;
+        transform: rotate(-90deg) ;
     }
     .logo {
         font-size: 20px;
         font-family: 'Eczar', serif;
         letter-spacing: .5px;
-        left: -15px;
-        top: 99px;
         transition: all .3s ease;
-        span {
-            font-size: 11px;
-        }
-        @include breakpoint(mobile) {
-            color: $grey_light;
-            left: -35px;
-            top: 75px;
+        transform-origin: 55px 55px;
+        &--wrapper {
+            position: absolute;
+            left: 0;
+            top: 60px;
         }
     }
     .credentials {
-        bottom: 45px;
-        left: -19px;
-        white-space: nowrap;
-        @include breakpoint(mobile) {
-            color: $grey_light;
-            left: -30px;
-            bottom: 45px;
+        margin-top: auto;
+        font-size: 12px;
+        transform-origin: 8px 0px;
+        &--wrapper {
+            position: absolute;
+            bottom: 0;
+            left: 0;
         }
     }
 }
@@ -119,29 +125,40 @@ body {
                     transform: translateX(2px);
                 }
             }
-            & ~ .header {
-                color: $grey_light;
-                button {
-                    transform: rotate(0);
-                }
-                .logo {
-                    top: 0;
-                    left: 25px;
-                }
-                .credentials {
-                    bottom: 12px;
-                    left: 25px;
-                }
-            }
             .container--close {
                 display: none;
             }
             .container--left-inner {
                 opacity: 0;
             }
+            & ~ .header {
+                .logo {
+                    transform: rotate(0);
+                    &--wrapper {
+                        top: 0;
+                        left: 20px;
+                    }
+                }
+                .credentials {
+                    transform: rotate(0);
+                    &--wrapper {
+                        bottom: 5px;
+                        left: 20px;
+                    }
+                }
+            }
         }
         @include breakpoint(mobile) {
             display: none;
+        }
+    }
+    &.active {
+        @include breakpoint(desktop) {
+            & ~ .header {
+                button {
+                    color: $grey;
+                }
+            }
         }
     }
     @include breakpoint(mobile) {
@@ -300,7 +317,6 @@ body {
         }
         &.active {
             transform: translateX(10px);
-            //color: black;
             color: $grey_light;
         }
     }
